tests/NormalTests/paczka1/fuzzy1/50791749.err
Error in line 6: qsQChIMimEP A82 76,9
Error in line 17: oYRp S846 67,5
Error in line 29: WAO3 S922 40,01
Error in line 27: WAO3 S846 16,2
